--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.2",
-    "hardhat": "^2.9.3"
+    "hardhat": "^2.9.3",
+    "solidity-coverage": "^0.7.20"
   }
 }
